# novamob

./: .gitignore  .gitmodules  README.md
scout_description/: CMakeLists.txt  package.xml
scout_description/config/: nav2_params_scout.yaml
scout_description/launch/: complete_navigation.launch.py  display.launch.py  display.launch2.py  scout_base_description.launch.py
scout_description/models/indoor_with_doors_2/: model.config
scout_description/models/outdoor_1/media/: outdoor1_texture3.dae
scout_description/models/puddle/: model.config  model.sdf
scout_description/scripts/: follow_waypoints_classic.py  follow_waypoints_test.py  navigation_results.csv  navigation_results_dynamic.csv  rtf_monitor.py
scout_description/urdf/scout_v2/: scout_v2.urdf  scout_v2.xacro  scout_v2_trailer.xacro  scout_wheel_type1.xacro  scout_wheel_type2.xacro
scout_description/world/: bumps.world  classic_maize_field_wider.world  indoor_2.world  indoor_2_testing.world  indoor_2_testing_obstacles.world  outdoor.world
scout_nav2_gz/: CMakeLists.txt  package.xml
scout_nav2_gz/config/: diff_drive_controller_velocity.yaml  dual_ekf_navsat_params.yaml  ekf.yaml  ekf_new.yaml  ekf_odom.yaml  nav2_no_map_params.yaml  nav2_no_map_params_backported.yaml  nav2_params.yaml  nav2_params_backported.yaml  nav2_params_default.yaml  nav2_params_scout.yaml
scout_nav2_gz/launch/: complete_navigation.launch.py  display.launch.py  display.launch_diff.py  display.launch_odom.py  dual_ekf_navsat.launch.py  gazebo_gps_world.launch.py  gps_waypoint_follower.launch.py  mapviz.launch.py
scout_nav2_gz/maps/: my_map_indoor.pgm  my_map_indoor.yaml
scout_nav2_gz/models/construction_cone/: model-1_4.sdf  model.sdf
scout_nav2_gz/models/indoor_no_doors_2/: indoor_2.world  model.sdf
scout_nav2_gz/models/outdoor_1/: model.config
scout_nav2_gz/models/outdoor_1/media/: outdoor1_texture.dae  outdoor1_texture2.mtl
scout_nav2_gz/models/puddle_lake/: model.config  model.sdf  puddle_lake.dae
scout_nav2_gz/models/puddle_medium/: model.config  model.sdf  puddle_medium.dae
scout_nav2_gz/models/puddle_small/: model.config  model.sdf  puddle_small.dae
scout_nav2_gz/models/speed_bump_1_short/: model.config
scout_nav2_gz/models/speed_bump_2/: model.config
scout_nav2_gz/models/speed_bump_2_short/: bump_1_060.dae  model.config
scout_nav2_gz/scripts/: follow_waypoints_fortress.py  follow_waypoints_optimized_fortress.py  follow_waypoints_test.py  laptop.csv  laptop_dynamic.csv  laptop_static.csv  laptop_unoptimized_dynamic_results.csv  laptop_unoptimized_results.csv  laptop_unoptimized_static_results.csv  navigation_results.csv  navigation_results_static.csv  navigation_results_unoptimized_dynamic.csv  navigation_results_unoptimized_static.csv  statistics.py
scout_nav2_gz/scripts/data/: summary_results copy.csv  summary_results copy.tex  summary_results copy.xlsx  summary_results.csv  summary_results.tex  summary_results.xlsx
scout_nav2_gz/scripts/data/novamob_gazebo_classic/: navigation_results_dynamic.csv
scout_nav2_gz/scripts/data/novamob_gazebo_fortress/: navigation_results.csv  navigation_results_dynamic.csv
scout_nav2_gz/scripts/data/novamob_unoptimized_gazebo_fortress/: navigation_results.csv  navigation_results_dynamic.csv
scout_nav2_gz/scripts/data/scout_gazebo_classic/: navigation_results.csv  navigation_results_static.csv
scout_nav2_gz/test/: test_bringup.launch.py  test_follow_waypoints.launch.py  test_reach_goal.launch.py
scout_nav2_gz/urdf/scout_v2/: scout_v2.xacro  scout_v2_camera_optimized.xacro  scout_v2_diff.xacro  scout_v2_no_cam.xacro  scout_v2_odom.xacro  scout_v2_optimized.xacro  scout_v2_trailer.xacro  scout_wheel_type1.xacro  scout_wheel_type2.xacro
scout_nav2_gz/world/: edifice.sdf  empty.sdf  generated.sdf  maize_field.world  maize_field_wider.world  maize_field_wider_no_heightmap.world  neo_workshop.sdf  neo_workshop_empty.sdf  outdoor.sdf
scout_nav2_gz/world/ign_indoor/: ign_indoor.sdf  ign_indoor_centered.sdf  ign_indoor_centered_testing_obstacles.sdf  ign_indoor_contacts.sdf  ign_indoor_fixed.sdf  ign_indoor_old.sdf  ign_indoor_test.sdf
(+410 files in other folders)
