<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema" ?>
<package format="3">
  <name>scout_description</name>
  <version>0.1.0</version>
  <description>Scout URDF Description</description>

  <author email="contact@westonrobot.com">TODO</author>
  <maintainer email="contact@westonrobot.com">TODO</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_localization</exec_depend>


  <build_depend>gazebo_ros</build_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <build_depend>gazebo_plugins</build_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <build_depend>gazebo_dev</build_depend>
  <exec_depend>gazebo_dev</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>

    <gazebo_ros gazebo_media_path="${prefix}/meshes/scout_v2"/>
    <gazebo_ros gazebo_model_path="${prefix}/meshes/scout_v2"/>
  </export>
</package>
